--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>APIs</title>
+    <title>Weather API</title>
   </head>
   <body>
-
+    <form action="/" method="post">
+    <label for="city">City Name: </label>
+    <input type="text" name="city" placeholder="Enter a city">
+    <button type="submit">Search</button>
+    </form>
   </body>
 </html>
